--- a/index.html
+++ b/index.html
@@ -1,43 +1,50 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebApp Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <header>
-        <h1>YourApp</h1>
-        <img src="icons/icon-bell.svg" alt="bell icon">
-        <img src="images/avatar.png" alt="Edgar Santana">
-        <h1>Edgar Santana</h1>
-    </header>
-    <nav>
-        <img src="icons/icon-dashboard.svg" alt="dashboard" />
-        <img src="icons/icon-members.svg" alt="members" />
-        <img src="icons/icon-visits.svg" alt="visit traffic" />
-        <img src="icons/icon-settings.svg" alt="settings" />
-    </nav>
-    <main>
-        <h1>Dashboard</h1>
+    <div class="container">
 
-        <h2>TRAFFIC</h2>
-        
-        <h2>DAILY TRAFFIC</h2>
+        <header>
+            <h1>YourApp</h1>
+            <img src="icons/icon-bell.svg" alt="bell icon">
+            <img src="images/avatar.png" alt="Edgar Santana">
+            <h1>Edgar Santana</h1>
+        </header>
+        <nav>
+            <img src="icons/icon-dashboard.svg" alt="dashboard" />
+            <img src="icons/icon-members.svg" alt="members" />
+            <img src="icons/icon-visits.svg" alt="visit traffic" />
+            <img src="icons/icon-settings.svg" alt="settings" />
+        </nav>
+        <main>
+            <h1>Dashboard</h1>
 
-        <h2>MOBILE USERS</h2>
+            <h2>TRAFFIC</h2>
 
-        <h2>SOCIAL STATS</h2>
+            <h2>DAILY TRAFFIC</h2>
 
-        <h2>NEW MEMBERS</h2>
+            <h2>MOBILE USERS</h2>
 
-        <h2>RECENT ACTIVITY</h2>
+            <h2>SOCIAL STATS</h2>
 
-        <h2>MESSAGE USER</h2>
+            <h2>NEW MEMBERS</h2>
 
-        <h2>SETTINGS</h2>
-    </main>
+            <h2>RECENT ACTIVITY</h2>
+
+            <h2>MESSAGE USER</h2>
+
+            <h2>SETTINGS</h2>
+        </main>
+    </div>
     <script type="text/javascript" src="app.js"></script>
+
 </body>
+
 </html>
