--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,12 +9,11 @@
 
 <body>
     <div class="container">
-
         <header>
-            <h1>YourApp</h1>
-            <img src="icons/icon-bell.svg" alt="bell icon">
-            <img src="images/avatar.png" alt="Edgar Santana">
-            <h1>Edgar Santana</h1>
+            <h2><strong>Your</strong>App</h2>
+            <img class="header-icon" src="icons/icon-bell.svg" alt="bell icon">
+            <img class="avatar" src="images/avatar.png" alt="Edgar Santana">
+            <h6>Edgar Santana</h6>
         </header>
         <nav>
             <img src="icons/icon-dashboard.svg" alt="dashboard" />
@@ -44,7 +42,5 @@
         </main>
     </div>
     <script type="text/javascript" src="app.js"></script>
-
 </body>
-
 </html>
