--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container">
         <header>
-            <h3><strong>Your</strong>App</h3>
+            <h3 class="app-name"><strong>Your</strong>App</h3>
             <img class="header-icon" src="icons/icon-bell.svg" alt="bell icon">
             <img class="avatar" src="images/avatar.png" alt="Edgar Santana">
-            <h6>Edgar Santana</h6>
+            <h4 class="user-name">Edgar Santana</h4>
         </header>
         <nav>
-            <img src="icons/icon-dashboard.svg" alt="dashboard" />
-            <img src="icons/icon-members.svg" alt="members" />
-            <img src="icons/icon-visits.svg" alt="visit traffic" />
-            <img src="icons/icon-settings.svg" alt="settings" />
+            <img class="nav-icon" src="icons/icon-dashboard.svg" alt="dashboard" />
+            <img class="nav-icon" src="icons/icon-members.svg" alt="members" />
+            <img class="nav-icon" src="icons/icon-visits.svg" alt="visit traffic" />
+            <img class="nav-icon" src="icons/icon-settings.svg" alt="settings" />
         </nav>
         <main>
             <h1>Dashboard</h1>
