--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebApp Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/grid.css">
+
 </head>
 
 <body>
     <div class="container">
         <header>
-            <h3 class="app-name"><strong>Your</strong>App</h3>
-            <img class="header-icon" src="icons/icon-bell.svg" alt="bell icon">
-            <img class="avatar" src="images/avatar.png" alt="Edgar Santana">
-            <h4 class="user-name">Edgar Santana</h4>
+            <ul>
+                <li class="app-name"><strong>Your</strong>App</li>
+                <li><img class="header-icon" src="icons/icon-bell.svg" alt="bell icon"></li>
+                <li><img class="avatar" src="images/avatar.png" alt="Edgar Santana"></li>
+                <li class="user-name">Edgar Santana</li>
+            </ul>
         </header>
         <nav>
             <img class="nav-icon" src="icons/icon-dashboard.svg" alt="dashboard" />
