--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <header>
-            <ul>
+            <ul class="header-bar">
                 <li class="app-name"><strong>Your</strong>App</li>
-                <li><img class="header-icon" src="icons/icon-bell.svg" alt="bell icon"></li>
-                <li><img class="avatar" src="images/avatar.png" alt="Edgar Santana"></li>
+                <li ><img class="header-icon" src="icons/icon-bell.svg" alt="bell icon"></li>
+                <li ><img class="avatar" src="images/avatar.png" alt="Edgar Santana"></li>
                 <li class="user-name">Edgar Santana</li>
             </ul>
         </header>
