--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             </ul>
         </header>
         <nav>
-            <img class="nav-icon" src="icons/icon-dashboard.svg" alt="dashboard" />
-            <img class="nav-icon" src="icons/icon-members.svg" alt="members" />
-            <img class="nav-icon" src="icons/icon-visits.svg" alt="visit traffic" />
-            <img class="nav-icon" src="icons/icon-settings.svg" alt="settings" />
+            <ul>
+                <li><img class="nav-icon" src="icons/icon-dashboard.svg" alt="dashboard" /></li>
+                <li><img class="nav-icon" src="icons/icon-members.svg" alt="members" /></li>
+                <li><img class="nav-icon" src="icons/icon-visits.svg" alt="visit traffic" /></li>
+                <li><img class="nav-icon" src="icons/icon-settings.svg" alt="settings" /></li>
+            </ul>
         </nav>
         <main>
             <h1>Dashboard</h1>
