--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </header>
         <nav>
             <ul>
-                <li><img class="nav-icon" src="icons/icon-dashboard.svg" alt="dashboard" /></li>
-                <li><img class="nav-icon" src="icons/icon-members.svg" alt="members" /></li>
-                <li><img class="nav-icon" src="icons/icon-visits.svg" alt="visit traffic" /></li>
-                <li><img class="nav-icon" src="icons/icon-settings.svg" alt="settings" /></li>
+                <li class="nav-icon"><img src="icons/icon-dashboard.svg" alt="dashboard" /></li>
+                <li class="nav-icon"><img src="icons/icon-members.svg" alt="members" /></li>
+                <li class="nav-icon"><img src="icons/icon-visits.svg" alt="visit traffic" /></li>
+                <li class="nav-icon"><img src="icons/icon-settings.svg" alt="settings" /></li>
             </ul>
         </nav>
         <main>
