started search bar

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
                 <li class="nav-icon"><img src="icons/icon-members.svg" alt="members" /></li>
                 <li class="nav-icon"><img src="icons/icon-visits.svg" alt="visit traffic" /></li>
                 <li class="nav-icon"><img src="icons/icon-settings.svg" alt="settings" /></li>
-            </ul>
+            </ul> 
         </nav>
         <main>
-            <h1>Dashboard</h1>
+
+            <input id="search" name="search" type="text" placeholder="Search" data-list="a" />
+
+            <h1 id="dashboard">Dashboard</h1>
 
             <h2>TRAFFIC</h2>
 
