--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <input id="search" name="search" type="text" placeholder="Search" data-list="a" />
 
             <h1 id="dashboard">Dashboard</h1>
+            <p id="alert">Alert Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor
+            id nibh ultricies vehicula ut id elit. Curabitur blandit tempus porttitor.</p>
 
             <h2>TRAFFIC</h2>
 
