--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <h1 id="dashboard">Dashboard</h1>
             <p id="alert"><strong>Alert</strong> Nullam quis risus eget urna mollis ornare vel eu leo. Nullam id dolor
-            id nibh ultricies vehicula ut id elit. Curabitur blandit tempus porttitor. <button class="close"><strong>&times;</strong></button></p>
+            id nibh ultricies vehicula ut id elit. Curabitur blandit tempus porttitor. <button class="close">&times;</button></p>
 
             <h2>TRAFFIC</h2>
 
