--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
 
             <canvas id="myChart" width="400" height="400"></canvas>
 
-            <h2>DAILY TRAFFIC</h2>
+            <canvas id="myBarChart" width="400" height="400"></canvas>
 
-            <h2>MOBILE USERS</h2>
-
+            <canvas id="myDoughnutChart" width="400" height="400"></canvas>
             <h2>SOCIAL STATS</h2>
 
             <h2>NEW MEMBERS</h2>
