--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
 
             <canvas id="myDoughnutChart" width="400" height="400"></canvas>
             <h2>SOCIAL STATS</h2>
+            <div class="twitter-widget">
+                <img src="icons/icon-twitter.svg" alt="Twitter icon"/>
+            </div>
+
+            <div class="facebook-widget">
+                <img src="icons/icon-facebook.svg" alt="Facebook icon"/>
+            </div>
+            
+            <div>
+                <img src="icons/icon-google-plus.svg" alt="Google Plus icon" />
+            </div>
 
             <h2>NEW MEMBERS</h2>
 
