--- a/index.html
+++ b/index.html
@@ -45,15 +45,21 @@
             <canvas id="myDoughnutChart" width="400" height="400"></canvas>
             <h2>SOCIAL STATS</h2>
             <div class="twitter-widget">
-                <img src="icons/icon-twitter.svg" alt="Twitter icon"/>
+                <img src="icons/icon-twitter.svg" alt="Twitter icon" />
+                <h4>Twitter</h4>
+                <p>10,345</p>
             </div>
 
             <div class="facebook-widget">
                 <img src="icons/icon-facebook.svg" alt="Facebook icon"/>
+                <h4>Facebook</h4>
+                <p>8,739</p>
             </div>
             
-            <div>
+            <div class="google-widget">
                 <img src="icons/icon-google-plus.svg" alt="Google Plus icon" />
+                <h4>Google+</h4>
+                <p>2,530</p>
             </div>
 
             <h2>NEW MEMBERS</h2>
