--- a/index.html
+++ b/index.html
@@ -53,13 +53,17 @@
                 </div>
 
             <div class="facebook-widget">
-                 <img class="sm-icon" src="icons/icon-facebook.svg" alt="Facebook icon" />
+                <div class="sm-icon-bg">
+                    <img class="sm-icon" src="icons/icon-facebook.svg" alt="Facebook icon" />
+                </div>
                  <h4>Facebook</h4>
                  <p>8,739</p>
             </div>
 
             <div class="google-widget">
-                 <img class="sm-icon" src="icons/icon-google-plus.svg" alt="Google Plus icon" />
+                <div class="sm-icon-bg">
+                    <img class="sm-icon" src="icons/icon-google-plus.svg" alt="Google Plus icon" />
+                </div>
                  <h4>Google+</h4>
                  <p>2,530</p>
             </div>
