--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
                 <div class="sm-icon-bg">
                     <img class="sm-icon" src="icons/icon-twitter.svg" alt="Twitter icon" />
                 </div>
-                    <h4>Twitter</h4>
-                    <p>10,345</p>
+                    <h4 class="sm-name">Twitter</h4>
+                    <p class="sm-numbers">10,345</p>
                 </div>
 
             <div class="facebook-widget">
                 <div class="sm-icon-bg">
                     <img class="sm-icon" src="icons/icon-facebook.svg" alt="Facebook icon" />
                 </div>
-                 <h4>Facebook</h4>
-                 <p>8,739</p>
+                 <h4 class="sm-name">Facebook</h4>
+                 <p class="sm-numbers">8,739</p>
             </div>
 
             <div class="google-widget">
                 <div class="sm-icon-bg">
                     <img class="sm-icon" src="icons/icon-google-plus.svg" alt="Google Plus icon" />
                 </div>
-                 <h4>Google+</h4>
-                 <p>2,530</p>
+                 <h4 class="sm-name">Google+</h4>
+                 <p class="sm-numbers">2,530</p>
             </div>
 
                 <h2>NEW MEMBERS</h2>
