--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <canvas id="myDoughnutChart" width="400" height="400"></canvas>
             <h2>SOCIAL STATS</h2>
-            <div class="twitter-widget">
+            <div class="sm-widget">
                 <div class="sm-icon-bg">
                     <img class="sm-icon" src="icons/icon-twitter.svg" alt="Twitter icon" />
                 </div>
@@ -52,7 +52,7 @@
                     <p class="sm-numbers">10,345</p>
                 </div>
 
-            <div class="facebook-widget">
+            <div class="sm-widget">
                 <div class="sm-icon-bg">
                     <img class="sm-icon" src="icons/icon-facebook.svg" alt="Facebook icon" />
                 </div>
@@ -60,7 +60,7 @@
                  <p class="sm-numbers">8,739</p>
             </div>
 
-            <div class="google-widget">
+            <div class="sm-widget">
                 <div class="sm-icon-bg">
                     <img class="sm-icon" src="icons/icon-google-plus.svg" alt="Google Plus icon" />
                 </div>
