--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>SOCIAL STATS</h2>
             <div class="sm-widget">
                 <div class="sm-icon-bg">
-                    <img class="sm-icon" src="icons/icon-twitter.svg" alt="Twitter icon" />
+                    <img class="sm-icon-twitter" src="icons/icon-twitter.svg" alt="Twitter icon" />
                 </div>
                     <h4 class="sm-name">Twitter</h4>
                     <p class="sm-numbers">10,345</p>
@@ -54,7 +54,7 @@
 
             <div class="sm-widget">
                 <div class="sm-icon-bg">
-                    <img class="sm-icon" src="icons/icon-facebook.svg" alt="Facebook icon" />
+                    <img class="sm-icon-fb" src="icons/icon-facebook.svg" alt="Facebook icon" />
                 </div>
                  <h4 class="sm-name">Facebook</h4>
                  <p class="sm-numbers">8,739</p>
@@ -62,7 +62,7 @@
 
             <div class="sm-widget">
                 <div class="sm-icon-bg">
-                    <img class="sm-icon" src="icons/icon-google-plus.svg" alt="Google Plus icon" />
+                    <img class="sm-icon-google" src="icons/icon-google-plus.svg" alt="Google Plus icon" />
                 </div>
                  <h4 class="sm-name">Google+</h4>
                  <p class="sm-numbers">2,530</p>
