--- a/index.html
+++ b/index.html
@@ -48,34 +48,53 @@
                 <div class="sm-icon-bg">
                     <img class="sm-icon-twitter" src="icons/icon-twitter.svg" alt="Twitter icon" />
                 </div>
-                    <h4 class="sm-name">Twitter</h4>
-                    <p class="sm-numbers">10,345</p>
-                </div>
+                <h4 class="sm-name">Twitter</h4>
+                <p class="sm-numbers">10,345</p>
+            </div>
 
             <div class="sm-widget">
                 <div class="sm-icon-bg">
                     <img class="sm-icon-fb" src="icons/icon-facebook.svg" alt="Facebook icon" />
                 </div>
-                 <h4 class="sm-name">Facebook</h4>
-                 <p class="sm-numbers">8,739</p>
+                <h4 class="sm-name">Facebook</h4>
+                <p class="sm-numbers">8,739</p>
             </div>
 
             <div class="sm-widget">
                 <div class="sm-icon-bg">
                     <img class="sm-icon-google" src="icons/icon-google-plus.svg" alt="Google Plus icon" />
                 </div>
-                 <h4 class="sm-name">Google+</h4>
-                 <p class="sm-numbers">2,530</p>
+                <h4 class="sm-name">Google+</h4>
+                <p class="sm-numbers">2,530</p>
             </div>
 
-                <h2>NEW MEMBERS</h2>
+            <h2>NEW MEMBERS</h2>
+            <img src="images/member-1.jpg" alt="Victoria Chambers image" />
+            <p>Victoria Chambers</p>
+            <address>victoria.chambers80@example.com</address>
+            <p>10/15/15</p>
 
-                <h2>RECENT ACTIVITY</h2>
+            <img src="images/member-2.jpg" alt="Dale Byrd image" />
+            <p>Dale Byrd</p>
+            <address>dale.byrd52@example.com</address>
+            <p>10/15/15</p>
 
-                <h2>MESSAGE USER</h2>
+            <img src="images/member-3.jpg" alt="Dawn Wood image" />
+            <p>Dawn Wood</p>
+            <address>dawn.wood16@example.com</address>
+            <p>10/15/15</p>
 
-                <h2>SETTINGS</h2>
-</main>
+            <img src="images/member-4.jpg" alt="Dan Oliver image" />
+            <p>Dan Oliver</p>
+            <address>dan.oliver82@example.com</address>
+            <p>10/15/15</p>
+
+            <h2>RECENT ACTIVITY</h2>
+
+            <h2>MESSAGE USER</h2>
+
+            <h2>SETTINGS</h2>
+        </main>
     </div>
 
     <script type="text/javascript" src="dist/Chart.bundle.js"></script>
