--- a/index.html
+++ b/index.html
@@ -90,6 +90,25 @@
             <p>10/15/15</p>
 
             <h2>RECENT ACTIVITY</h2>
+            <img src="images/member-1.jpg" alt="Victoria Chambers image" />
+            <p>Victoria Chambers commented on YourApp's SEO Tips</p>
+            <p>4 hours ago</p>
+            <button>></button>
+
+            <img src="images/member-2.jpg" alt="Dale Byrd image" />
+            <p>Dale Byrd liked the post Facebook's Changes for 2016</p>
+            <p>5 hours ago</p>
+            <button>></button>
+
+            <img src="images/member-3.jpg" alt="Dawn Wood image" />
+            <p>Dawn Wood commented on Facebook's Changes for 2016</p>
+            <p>5 hours ago</p>
+            <button>></button>
+
+            <img src="images/member-4.jpg" alt="Dan Oliver image" />
+            <p>Dan Oliver posted on YourApp's SEO Tips</p>
+            <p>1 day ago</p>
+            <button>></button>
 
             <h2>MESSAGE USER</h2>
 
