started message area

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
             <button>></button>
 
             <h2>MESSAGE USER</h2>
+            <fieldset>
+                <input type="text" id="user" name="search_user" />
+                <textarea id="message" name="user_message"></textarea>
+            </fieldset>
 
             <h2>SETTINGS</h2>
         </main>
