--- a/index.html
+++ b/index.html
@@ -69,50 +69,50 @@
             </div>
 
             <h2>NEW MEMBERS</h2>
-            <img src="images/member-1.jpg" alt="Victoria Chambers image" />
-            <p>Victoria Chambers</p>
-            <address>victoria.chambers80@example.com</address>
+            <img class="members-image" src="images/member-1.jpg" alt="Victoria Chambers image" />
+            <p class="member-name">Victoria Chambers</p>
+            <p class="member-email"><a class="email" href="mailto:webmaster@example.com">victoria.chambers80@example.com</a></p>
             <p>10/15/15</p>
             <hr />
 
-            <img src="images/member-2.jpg" alt="Dale Byrd image" />
-            <p>Dale Byrd</p>
-            <address>dale.byrd52@example.com</address>
+            <img class="members-image" src="images/member-2.jpg" alt="Dale Byrd image" />
+            <p class="member-name">Dale Byrd</p>
+            <p class="member-email"><a class="email" href="mailto:webmaster@example.com">dale.byrd52@example.com</a></p>
             <p>10/15/15</p>
             <hr />
 
-            <img src="images/member-3.jpg" alt="Dawn Wood image" />
-            <p>Dawn Wood</p>
-            <address>dawn.wood16@example.com</address>
+            <img class="members-image" src="images/member-3.jpg" alt="Dawn Wood image" />
+            <p class="member-name">Dawn Wood</p>
+            <p class="member-email"><a class="email" href="mailto:webmaster@example.com">dawn.wood16@example.com</a></p>
             <p>10/15/15</p>
             <hr />
 
-            <img src="images/member-4.jpg" alt="Dan Oliver image" />
-            <p>Dan Oliver</p>
-            <address>dan.oliver82@example.com</address>
+            <img class="members-image" src="images/member-4.jpg" alt="Dan Oliver image" />
+            <p class="member-name">Dan Oliver</p>
+            <p class="member-email"><a class="email" href="mailto:webmaster@example.com">dan.oliver82@example.com</a></p>
             <p>10/15/15</p>
             <hr />
 
             <h2>RECENT ACTIVITY</h2>
-            <img src="images/member-1.jpg" alt="Victoria Chambers image" />
+            <img class="members-image" src="images/member-1.jpg" alt="Victoria Chambers image" />
             <p>Victoria Chambers commented on YourApp's SEO Tips</p>
             <p>4 hours ago</p>
             <button>></button>
             <hr />
 
-            <img src="images/member-2.jpg" alt="Dale Byrd image" />
+            <img class="members-image" src="images/member-2.jpg" alt="Dale Byrd image" />
             <p>Dale Byrd liked the post Facebook's Changes for 2016</p>
             <p>5 hours ago</p>
             <button>></button>
             <hr />
 
-            <img src="images/member-3.jpg" alt="Dawn Wood image" />
+            <img class="members-image" src="images/member-3.jpg" alt="Dawn Wood image" />
             <p>Dawn Wood commented on Facebook's Changes for 2016</p>
             <p>5 hours ago</p>
             <button>></button>
             <hr />
 
-            <img src="images/member-4.jpg" alt="Dan Oliver image" />
+            <img class="members-image" src="images/member-4.jpg" alt="Dan Oliver image" />
             <p>Dan Oliver posted on YourApp's SEO Tips</p>
             <p>1 day ago</p>
             <button>></button>
