--- a/index.html
+++ b/index.html
@@ -95,27 +95,27 @@
 
             <h2>RECENT ACTIVITY</h2>
             <img class="members-image" src="images/member-1.jpg" alt="Victoria Chambers image" />
-            <p>Victoria Chambers commented on YourApp's SEO Tips</p>
-            <p>4 hours ago</p>
-            <button>></button>
+            <p class="status">Victoria Chambers commented on YourApp's SEO Tips</p>
+            <p class="time">4 hours ago</p>
+            <img class="arrow" src="images/right-arrow.png" alt="right arrow button" />
             <hr />
 
             <img class="members-image" src="images/member-2.jpg" alt="Dale Byrd image" />
-            <p>Dale Byrd liked the post Facebook's Changes for 2016</p>
-            <p>5 hours ago</p>
-            <button>></button>
+            <p class="status">Dale Byrd liked the post Facebook's Changes for 2016</p>
+            <p class="time">5 hours ago</p>
+            <img class="arrow" src="images/right-arrow.png" alt="right arrow button" />
             <hr />
 
             <img class="members-image" src="images/member-3.jpg" alt="Dawn Wood image" />
-            <p>Dawn Wood commented on Facebook's Changes for 2016</p>
-            <p>5 hours ago</p>
-            <button>></button>
+            <p class="status">Dawn Wood commented on Facebook's Changes for 2016</p>
+            <p class="time">5 hours ago</p>
+            <img class="arrow" src="images/right-arrow.png" alt="right arrow button" />
             <hr />
 
             <img class="members-image" src="images/member-4.jpg" alt="Dan Oliver image" />
-            <p>Dan Oliver posted on YourApp's SEO Tips</p>
-            <p>1 day ago</p>
-            <button>></button>
+            <p class="status">Dan Oliver posted on YourApp's SEO Tips</p>
+            <p class="time">1 day ago</p>
+            <img class="arrow" src="images/right-arrow.png" alt="right arrow button"/>
             <hr />
 
             <h2>MESSAGE USER</h2>
