--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <img class="members-image" src="images/member-4.jpg" alt="Dan Oliver image" />
             <p class="status">Dan Oliver posted on YourApp's SEO Tips</p>
             <p class="time">1 day ago</p>
-            <img class="arrow" src="images/right-arrow.png" alt="right arrow button"/>
+            <img class="arrow" src="images/right-arrow.png" alt="right arrow button" />
             <hr />
 
             <h2>MESSAGE USER</h2>
@@ -126,7 +126,15 @@
 
             <h2>SETTINGS</h2>
             <p>Send Email Notifications</p>
+            <label class="switch">
+                <input type="checkbox">
+                <span class="slider round"></span>
+            </label>
             <p>Set Profile to Public</p>
+            <label class="switch">
+                <input type="checkbox">
+                <span class="slider round"></span>
+            </label>
             <select id="timezones" name="select_timezones">
                 <option>Pacific Time (US)</option>
                 <option>Mountain Time (US)</option>
