--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="dist/Chart.css">
     <link rel="stylesheet" href="dist/Chart.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -123,6 +124,7 @@
                 <input type="text" id="user" name="search_user" placeholder="Search for User" />
                 <textarea id="message" name="user_message" placeholder="Message for User"></textarea>
             </fieldset>
+            <button class="send-message">SEND</button>
 
             <h2>SETTINGS</h2>
             <p>Send Email Notifications</p>
